--- a/borntofish/index.html
+++ b/borntofish/index.html
@@ -27,13 +27,34 @@
         </p>
         <div class="carousel-container">
             <div class="carousel-slide">
-                <img src="./Image/bat1.png" alt="Slide 1">
+                <img src="./Image/image1.jpg" alt="Slide 1">
             </div>
             <div class="carousel-slide">
-                <img src="./Image/bat2.jpg" alt="Slide 2">
+                <img src="./Image/image2.jpg" alt="Slide 2">
             </div>
             <div class="carousel-slide">
-                <img src="./Image/bat3.jpg" alt="Slide 3">
+                <img src="./Image/image3.jpg" alt="Slide 3">
+            </div>
+            <div class="carousel-slide">
+                <img src="./Image/image4.jpg" alt="Slide 4">
+            </div>
+            <div class="carousel-slide">
+                <img src="./Image/image5.jpg" alt="Slide 5">
+            </div>
+            <div class="carousel-slide">
+                <img src="./Image/image6.jpg" alt="Slide 6">
+            </div>
+            <div class="carousel-slide">
+                <img src="./Image/image7.jpg" alt="Slide 7">
+            </div>
+            <div class="carousel-slide">
+                <img src="./Image/image8.jpg" alt="Slide 8">
+            </div>
+            <div class="carousel-slide">
+                <img src="./Image/image9.jpg" alt="Slide 9">
+            </div>
+            <div class="carousel-slide">
+                <img src="./Image/image10.jpg" alt="Slide 10">
             </div>
         
             <!-- Contrôles du carrousel -->
@@ -72,7 +93,7 @@
                     </section>
                     <section>
                         <p>
-                            Caufriezthierry@hotmail.com
+                            caufriezthierry@hotmail.com
                         </p>
                     </section>
                 </div>
