--- a/borntofish/index.html
+++ b/borntofish/index.html
@@ -42,6 +42,18 @@
                 <img src="./Image/image5.jpg" alt="Slide 5">
             </div>
             <div class="carousel-slide">
+                <video autoplay loop muted>
+                    <source src="./Image/video1.mp4" type="video/mp4">
+                    Votre navigateur ne supporte pas la vidéo.
+                </video>
+            </div>
+            <div class="carousel-slide">
+                <video autoplay loop muted>
+                    <source src="./Image/video2.mp4" type="video/mp4">
+                    Votre navigateur ne supporte pas la vidéo.
+                </video>
+            </div>
+            <div class="carousel-slide">
                 <img src="./Image/image6.jpg" alt="Slide 6">
             </div>
             <div class="carousel-slide">
@@ -124,6 +136,8 @@
             </a>
         </div>
     </article>
-    <footer></footer>
+    <footer>
+        <p>©Thierry Caufriez</p>
+    </footer>
 </body>
 </html>
