ajout nouveau logo plus adaptation

--- a/borntofish/index.html
+++ b/borntofish/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./CSS/style.css" rel="stylesheet" type="text/Css" />
-    <link rel="icon" href="./Image/Logo_petit_navire.png" type="image/x-icon" />
+    <link rel="icon" href="Logo.png" type="image/x-icon" />
     <title>Flying boat</title>
 </head>
 <body>
     <header>
-        <img id="logoimage" src="./Image/Logo_petit_navire.png" alt="logo" />
+        <img id="logoimage" src="Logo.png" alt="logo" />
         <div>
             <h1>Flying boat</h1>
         </div>
@@ -17,14 +17,19 @@
     <article>
         <h2>Présentation</h2>
         <hr>
-        <p>Bienvenue chez Évasion Nautique  ! 
-
-            Située au cœur de la Côte d'Azur, notre société de location de bateaux vous offre une expérience maritime inoubliable. Que vous souhaitiez explorer les eaux cristallines de la Méditerranée à bord d'un yacht luxueux, ou ressentir la liberté d'une voile gonflée par le vent, nous avons le bateau idéal pour chaque aventure. Nos embarcations sont soigneusement entretenues et équipées des dernières technologies pour garantir votre confort et sécurité. 
-            
-            Chez Évasion Nautique, votre satisfaction est notre priorité. Notre équipe professionnelle et passionnée est à votre disposition pour vous conseiller et personnaliser votre croisière selon vos envies. Naviguez en toute sérénité et découvrez les trésors cachés de notre magnifique littoral. 
-            
-            Embarquez avec nous pour une expérience nautique exceptionnelle et laissez-vous séduire par le charme de la mer. Évasion Nautique : votre rêve, notre passion.
-        </p>
+        <p>Une croisière fluvial inoubliable. Prenez le temps de vous détendre au fil de
+            l’eau. Embarquez à Eisden magnifique village en bord de Meuse. Montez à bord
+            du bateau et ouvrez les yeux, la Meuse nous montre tout son caractère. Au
+            premier coup d’œil, vous constaterez que ses eaux influencent le paysage. La
+            pêche y est exceptionnelle. Tout au long de votre croisière, vous découvrirez
+            des endroits pittoresques. Laissez-vous portez par le courant au pied de la
+            Montagne Saint-Pierre qui étend ses coteaux entre la vallée du Geer et de la
+            Meuse. Des conditions géologiques, climatiques singulières qui en font un site
+            naturel de première instance. Possibilité de débarquez au centre de Maastricht
+            pour du shopping ou profitez d’une terrasse. Pour les amoureux de la pêche le
+            bateau est tout équipé. Pêche en Zélande et en Suède. Il est également
+            possible d’organisé des sorties scolaire, visite des écluses et de la Montagne
+            Saint-Pierre.</p>
         <div class="carousel-container">
             <div class="carousel-slide">
                 <img src="./Image/image1.jpg" alt="Slide 1">
@@ -78,8 +83,8 @@
         <hr>
         <div id="trajets"> 
             <section>
-                <h3>Eijsden</h3>
-                <img class="trajetsImages" src="./Image/mapsEijsden.png" alt="MpasEijsden" />
+                <h3>Eisden</h3>
+                <img class="trajetsImages" src="./Image/mapsEijsden.png" alt="MpasEisden" />
             </section>
         </div>
         <h2>Contact/Adresse</h2>
@@ -122,14 +127,14 @@
                     </section>
                 </div>
             </a>
-            <a href="https://maps.app.goo.gl/y4wkP4ToHxzyt2G59" target="_blank">
+            <a href="https://maps.app.goo.gl/CL1JiCSxRk6J1YAD8" target="_blank">
                 <div class="contact">
                     <section>
                         <img class="imageContact" src="./Image/maps.jpg" alt="adresse" />
                     </section>
                     <section>
                         <p>
-                            maps
+                            route de Dolhain 14a Baelen 4837
                         </p>
                     </section>
                 </div>
